[package]
name = "px4flow_bsp"
version = "0.1.6"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "A board support package for the PX4FLOW optical flow sensor board"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/px4flow_bsp"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "mt9v034",
    "camera",
    "imaging",
    "bsp"
]

[dependencies]
cortex-m = "0.6.2"
bare-metal = "1.0.0"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
shared-bus = {version="0.1.4", features=["cortexm"] }
panic-rtt-core = {version="0.1.1", optional=true}

stm32f4xx-hal = {version="0.8.3",  features = ["stm32f407", "rt"] }
# Gyro
l3gd20 = "0.2.0"
# Camera / imaging sensor
mt9v034-i2c = {path="../mt9v034-i2c", version="0.1.5"}
# Serial EEPROM
eeprom24x = "0.3.0"

[dev-dependencies]
cortex-m-rt = "0.6.12"
panic-rtt-core = "0.1.1"
base64 = {version="0.12.3", default-features=false}

[features]
default = []
rttdebug = ["panic-rtt-core"]
# for stm32f407 dev board + arducam mt9v034 breakout module
breakout = []

